Updated EventStore Config

--- a/Demo/ZerraDemo.Common/appsettings.json
+++ b/Demo/ZerraDemo.Common/appsettings.json
@@ -1,7 +1,7 @@
 {
   "PetsSqlConnectionString": "Data Source=.;Initial Catalog=ZerraDemoPets;Integrated Security=true",
   "Ledger1SqlConnectionString": "Data Source=.;Initial Catalog=ZerraDemoLedger;Integrated Security=true",
-  "Ledger1EventStoreServer": "127.0.0.1:2113",
-  "Ledger2EventStoreServer": "127.0.0.1:2113",
+  "Ledger1EventStoreServer": "tcp://localhost:2113",
+  "Ledger2EventStoreServer": "tcp://localhost:2113",
   "LogFileDirectory": "C:\\Temp"
 }
