--- a/Demo/ZerraDemo.Common/appsettings.json
+++ b/Demo/ZerraDemo.Common/appsettings.json
@@ -1,6 +1,8 @@
 {
-  "PetsSqlConnectionString": "Data Source=.;Initial Catalog=ZerraDemoPets;Integrated Security=true",
-  "Ledger1SqlConnectionString": "Data Source=.;Initial Catalog=ZerraDemoLedger;Integrated Security=true",
+  "PetsSqlConnectionStringMSSQL": "Data Source=.;Initial Catalog=ZerraDemoLedger;Integrated Security=true",
+  "PetsSqlConnectionStringPOSTGRESQL": "User ID=postgres;Password=password123;Host=localhost;Port=5432;Database=zerrademopets;",
+  "Ledger1SqlConnectionStringMSSQL": "Data Source=.;Initial Catalog=ZerraDemoLedger;Integrated Security=true",
+  "Ledger1SqlConnectionStringPOSTGRESQL": "User ID=postgres;Password=password123;Host=localhost;Port=5432;Database=zerrademoledger;",
   "Ledger1EventStoreServer": "tcp://localhost:2113",
   "Ledger2EventStoreServer": "tcp://localhost:2113",
   "LogFileDirectory": "C:\\Temp"
