--- a/Demo/ZerraDemo.Domain.Ledger1.EventStore/ZerraDemo.Domain.Ledger1.EventStore.csproj
+++ b/Demo/ZerraDemo.Domain.Ledger1.EventStore/ZerraDemo.Domain.Ledger1.EventStore.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Framework\Zerra.Repository.EventStore.EventStoreDB\Zerra.Repository.EventStore.EventStoreDB.csproj" />
     <ProjectReference Include="..\..\Framework\Zerra.Repository.Sql.MsSql\Zerra.Repository.Sql.MsSql.csproj" />
+    <ProjectReference Include="..\..\Framework\Zerra.Repository.Sql.PostgreSql\Zerra.Repository.Sql.PostgreSql.csproj" />
     <ProjectReference Include="..\..\Framework\Zerra.Repository\Zerra.Repository.csproj" />
     <ProjectReference Include="..\ZerraDemo.Domain.Ledger1\ZerraDemo.Domain.Ledger1.csproj" />
     <ProjectReference Include="..\ZerraDemo.Domain\ZerraDemo.Domain.csproj" />
