--- a/Framework/Zerra.Repository.Sql.Test/Zerra.Repository.Sql.Test.csproj
+++ b/Framework/Zerra.Repository.Sql.Test/Zerra.Repository.Sql.Test.csproj
@@ -18,6 +18,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Npgsql" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
