--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -2,27 +2,47 @@ version: "3.9"
 
 services:
 
-  zerrademo-petsdomain-sql:
-    image: mcr.microsoft.com/mssql/server:2017-latest
-    environment:
-      - MSSQL_PID=Developer
-      - SA_PASSWORD=Ld#dP22@uK4b
-      - ACCEPT_EULA=Y
-    volumes:
-      - zerrademo-pets-mssql-volume:/var/opt/mssql/data
-    ports:
-      - "1401:1433"
+  #zerrademo-petsdomain-mssql:
+  #  image: mcr.microsoft.com/mssql/server:2017-latest
+  #  environment:
+  #    - MSSQL_PID=Developer
+  #    - SA_PASSWORD=Ld#dP22@uK4b
+  #    - ACCEPT_EULA=Y
+  #  volumes:
+  #    - zerrademo-pets-mssql-volume:/var/opt/mssql/data
+  #  ports:
+  #    - "1401:1433"
       
-  zerrademo-ledger1domain-sql:
-    image: mcr.microsoft.com/mssql/server:2017-latest
+  #zerrademo-ledger1domain-mssql:
+  #  image: mcr.microsoft.com/mssql/server:2017-latest
+  #  environment:
+  #    - MSSQL_PID=Developer
+  #    - SA_PASSWORD=Ld#dP22@uK4b
+  #    - ACCEPT_EULA=Y
+  #  volumes:
+  #    - zerrademo-ledger1-mssql-volume:/var/opt/mssql/data
+  #  ports:
+  #    - "1402:1433"
+
+  zerrademo-petsdomain-postgresql:
+    image: postgres:latest
+    restart: always
     environment:
-      - MSSQL_PID=Developer
-      - SA_PASSWORD=Ld#dP22@uK4b
-      - ACCEPT_EULA=Y
+      POSTGRES_PASSWORD: password123
     volumes:
-      - zerrademo-ledger1-mssql-volume:/var/opt/mssql/data
+      - zerrademo-pets-postgresql-volume:/var/lib/postgresql/data
     ports:
-      - "1402:1433"
+      - 1401:5432
+      
+  zerrademo-ledger1domain-postgresql:
+    image: postgres:latest
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: password123
+    volumes:
+      - zerrademo-ledger1-postgresql-volume:/var/lib/postgresql/data
+    ports:
+      - 1402:5432
 
   zerrademo-ledger1domain-eventstore:
     image: eventstore/eventstore:latest
@@ -31,10 +51,9 @@ services:
       - EVENTSTORE_RUN_PROJECTIONS=All
       - EVENTSTORE_EXT_TCP_PORT=1113
       - EVENTSTORE_HTTP_PORT=2113
-      - EVENTSTORE_DB=/var/lib/eventstore/data
-      - EVENTSTORE_LOG=/var/lib/eventstore/log
     volumes:
-      - zerrademo-ledger1-eventstore-volume:/var/lib/eventstore
+      - zerrademo-ledger1-eventstore-data-volume:/var/lib/eventstore
+      - zerrademo-ledger1-eventstore-log-volume:/var/log/eventstore
     ports:
       - "1113:1113"
       - "2113:2113"
@@ -46,10 +65,9 @@ services:
       - EVENTSTORE_RUN_PROJECTIONS=All
       - EVENTSTORE_EXT_TCP_PORT=1114
       - EVENTSTORE_HTTP_PORT=2114
-      - EVENTSTORE_DB=/var/lib/eventstore/data
-      - EVENTSTORE_LOG=/var/lib/eventstore/log
     volumes:
-      - zerrademo-ledger2-eventstore-volume:/var/lib/eventstore
+      - zerrademo-ledger2-eventstore-data-volume:/var/lib/eventstore
+      - zerrademo-ledger2-eventstore-log-volume:/var/log/eventstore
     ports:
       - "1114:1114"
       - "2114:2114"
@@ -61,8 +79,10 @@ services:
       - ZerraDemo.Service.Weather=host.docker.internal:9002
       - ZerraDemo.Service.Ledger1=host.docker.internal:9003
       - ZerraDemo.Service.Ledger2=host.docker.internal:9004
-      - PetsSqlConnectionString=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
-      - Ledger1SqlConnectionString=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
+      #- PetsSqlConnectionStringMSSQL=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
+      #- Ledger1SqlConnectionStringMSSQL=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
+      - PetsSqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1401;Database=zerrademopets;
+      - Ledger1SqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1402;Database=zerrademoledger;
       - Ledger1EventStoreServer=tcp://host.docker.internal:2113
       - Ledger2EventStoreServer=tcp://host.docker.internal:2114
       - LogFileDirectory=
@@ -79,8 +99,10 @@ services:
       - ZerraDemo.Service.Weather=host.docker.internal:9002
       - ZerraDemo.Service.Ledger1=host.docker.internal:9003
       - ZerraDemo.Service.Ledger2=host.docker.internal:9004
-      - PetsSqlConnectionString=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
-      - Ledger1SqlConnectionString=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
+      #- PetsSqlConnectionStringMSSQL=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
+      #- Ledger1SqlConnectionStringMSSQL=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
+      - PetsSqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1401;Database=zerrademopets;
+      - Ledger1SqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1402;Database=zerrademoledger;
       - Ledger1EventStoreServer=tcp://host.docker.internal:2113
       - Ledger2EventStoreServer=tcp://host.docker.internal:2114
       - LogFileDirectory=
@@ -97,8 +119,10 @@ services:
       - ZerraDemo.Service.Weather=host.docker.internal:9002
       - ZerraDemo.Service.Ledger1=host.docker.internal:9003
       - ZerraDemo.Service.Ledger2=host.docker.internal:9004
-      - PetsSqlConnectionString=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
-      - Ledger1SqlConnectionString=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
+      #- PetsSqlConnectionStringMSSQL=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
+      #- Ledger1SqlConnectionStringMSSQL=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
+      - PetsSqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1401;Database=zerrademopets;
+      - Ledger1SqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1402;Database=zerrademoledger;
       - Ledger1EventStoreServer=tcp://host.docker.internal:2113
       - Ledger2EventStoreServer=tcp://host.docker.internal:2114
       - LogFileDirectory=
@@ -115,8 +139,10 @@ services:
       - ZerraDemo.Service.Weather=host.docker.internal:9002
       - ZerraDemo.Service.Ledger1=host.docker.internal:9003
       - ZerraDemo.Service.Ledger2=host.docker.internal:9004
-      - PetsSqlConnectionString=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
-      - Ledger1SqlConnectionString=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
+      #- PetsSqlConnectionStringMSSQL=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
+      #- Ledger1SqlConnectionStringMSSQL=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
+      - PetsSqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1401;Database=zerrademopets;
+      - Ledger1SqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1402;Database=zerrademoledger;
       - Ledger1EventStoreServer=tcp://host.docker.internal:2113
       - Ledger2EventStoreServer=tcp://host.docker.internal:2114
       - LogFileDirectory=
@@ -133,8 +159,10 @@ services:
       - ZerraDemo.Service.Weather=host.docker.internal:9002
       - ZerraDemo.Service.Ledger1=host.docker.internal:9003
       - ZerraDemo.Service.Ledger2=host.docker.internal:9004
-      - PetsSqlConnectionString=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
-      - Ledger1SqlConnectionString=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
+      #- PetsSqlConnectionStringMSSQL=Data Source=host.docker.internal,1401;Initial Catalog=ZerraDemoPets;User Id=sa;Password=Ld#dP22@uK4b;
+      #- Ledger1SqlConnectionStringMSSQL=Data Source=host.docker.internal,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;
+      - PetsSqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1401;Database=zerrademopets;
+      - Ledger1SqlConnectionStringPOSTGRESQL=User ID=postgres;Password=password123;Host=host.docker.internal;Port=1402;Database=zerrademoledger;
       - Ledger1EventStoreServer=tcp://host.docker.internal:2113
       - Ledger2EventStoreServer=tcp://host.docker.internal:2114
       - LogFileDirectory=
@@ -145,8 +173,12 @@ services:
       - "9000:80"
       
 volumes:
-  zerrademo-pets-mssql-volume:
-  zerrademo-ledger1-mssql-volume:
-  zerrademo-ledger1-eventstore-volume:
-  zerrademo-ledger2-eventstore-volume:
+  #zerrademo-pets-mssql-volume:
+  #zerrademo-ledger1-mssql-volume:
+  zerrademo-pets-postgresql-volume:
+  zerrademo-ledger1-postgresql-volume:
+  zerrademo-ledger1-eventstore-data-volume:
+  zerrademo-ledger1-eventstore-log-volume:
+  zerrademo-ledger2-eventstore-data-volume:
+  zerrademo-ledger2-eventstore-log-volume:  
     
