--- a/Deployment/deployment.yaml
+++ b/Deployment/deployment.yaml
@@ -114,7 +114,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: zerrademo-ledger1domain-postgresql-container
-        image: mcr.microsoft.com/mssql/server:2017-latest
+        image: postgres:latest
         ports:
           - containerPort: 5432
         env:
@@ -237,9 +237,9 @@ spec:
 #          - name: Ledger1SqlConnectionStringMSSQL
 #            value: "Data Source=zerrademo-ledger1domain-mssql-service,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;"
           - name: PetsSqlConnectionStringPOSTGRESQL
-            value: "User ID=postgres;Password=password123;zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademopets;"
+            value: "User ID=postgres;Password=password123;Host=zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademopets;"
           - name: Ledger1SqlConnectionStringPOSTGRESQL
-            value: "User ID=postgres;Password=password123;zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademoledger;"
+            value: "User ID=postgres;Password=password123;Host=zerrademo-petsdomain-postgresql-service;Port=1402;Database=zerrademoledger;"
           - name: Ledger1EventStoreServer
             value: "tcp://zerrademo-ledger1domain-eventstore-service:2113"
           - name: Ledger2EventStoreServer
@@ -286,9 +286,9 @@ spec:
 #          - name: Ledger1SqlConnectionStringMSSQL
 #            value: "Data Source=zerrademo-ledger1domain-mssql-service,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;"
           - name: PetsSqlConnectionStringPOSTGRESQL
-            value: "User ID=postgres;Password=password123;zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademopets;"
+            value: "User ID=postgres;Password=password123;Host=zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademopets;"
           - name: Ledger1SqlConnectionStringPOSTGRESQL
-            value: "User ID=postgres;Password=password123;zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademoledger;"
+            value: "User ID=postgres;Password=password123;Host=zerrademo-petsdomain-postgresql-service;Port=1402;Database=zerrademoledger;"
           - name: Ledger1EventStoreServer
             value: "tcp://zerrademo-ledger1domain-eventstore-service:2113"
           - name: Ledger2EventStoreServer
@@ -335,9 +335,9 @@ spec:
 #          - name: Ledger1SqlConnectionStringMSSQL
 #            value: "Data Source=zerrademo-ledger1domain-mssql-service,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;"
           - name: PetsSqlConnectionStringPOSTGRESQL
-            value: "User ID=postgres;Password=password123;zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademopets;"
+            value: "User ID=postgres;Password=password123;Host=zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademopets;"
           - name: Ledger1SqlConnectionStringPOSTGRESQL
-            value: "User ID=postgres;Password=password123;zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademoledger;"
+            value: "User ID=postgres;Password=password123;Host=zerrademo-petsdomain-postgresql-service;Port=1402;Database=zerrademoledger;"
           - name: Ledger1EventStoreServer
             value: "tcp://zerrademo-ledger1domain-eventstore-service:2113"
           - name: Ledger2EventStoreServer
@@ -384,9 +384,9 @@ spec:
 #          - name: Ledger1SqlConnectionStringMSSQL
 #            value: "Data Source=zerrademo-ledger1domain-mssql-service,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;"
           - name: PetsSqlConnectionStringPOSTGRESQL
-            value: "User ID=postgres;Password=password123;zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademopets;"
+            value: "User ID=postgres;Password=password123;Host=zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademopets;"
           - name: Ledger1SqlConnectionStringPOSTGRESQL
-            value: "User ID=postgres;Password=password123;zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademoledger;"
+            value: "User ID=postgres;Password=password123;Host=zerrademo-petsdomain-postgresql-service;Port=1402;Database=zerrademoledger;"
           - name: Ledger1EventStoreServer
             value: "tcp://zerrademo-ledger1domain-eventstore-service:2113"
           - name: Ledger2EventStoreServer
@@ -433,9 +433,9 @@ spec:
 #          - name: Ledger1SqlConnectionStringMSSQL
 #            value: "Data Source=zerrademo-ledger1domain-mssql-service,1402;Initial Catalog=ZerraDemoLedger;User Id=sa;Password=Ld#dP22@uK4b;"
           - name: PetsSqlConnectionStringPOSTGRESQL
-            value: "User ID=postgres;Password=password123;zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademopets;"
+            value: "User ID=postgres;Password=password123;Host=zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademopets;"
           - name: Ledger1SqlConnectionStringPOSTGRESQL
-            value: "User ID=postgres;Password=password123;zerrademo-petsdomain-postgresql-service;Port=1401;Database=zerrademoledger;"
+            value: "User ID=postgres;Password=password123;Host=zerrademo-petsdomain-postgresql-service;Port=1402;Database=zerrademoledger;"
           - name: Ledger1EventStoreServer
             value: "tcp://zerrademo-ledger1-eventstore-service:2113"
           - name: Ledger2EventStoreServer
