--- a/Demo/ZerraDemo.Common/ZerraDemo.Common.csproj
+++ b/Demo/ZerraDemo.Common/ZerraDemo.Common.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Framework\Zerra.CQRS.Kafka\Zerra.CQRS.Kafka.csproj" />
     <ProjectReference Include="..\..\Framework\Zerra.Logger\Zerra.Logger.csproj" />
     <ProjectReference Include="..\..\Framework\Zerra\Zerra.csproj" />
   </ItemGroup>
